--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,6 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "input": "^1.0.1",
-    "telegram": "^2.15.5"
+    "telegram": "^2.22.2"
   }
 }
